tests/e2e/pass/m40_direct_subscript.ep
# EXIT: 0
# STDOUT: B42
fun main(): void {
    let text = "ABC"
    if text[1] != 66 {
        os.ExitProcess(1)
    }
    print(text[1:2])
    let values = new i64[1]
    values[0] = 42
    print(itoa(values[0]))
    print("\n")
}
