tests/e2e/fail/str_data_field.ep
# COMPILE_ERROR: type str has no field 'data'
fun main(): void {
    let text = "abc"
    let value = text.data
    print(itoa(value[0]))
}
